--- a/css/index.css
+++ b/css/index.css
@@ -1,18 +1,17 @@
 * {
-	margin: 0px;	
+	margin: 0px;
+		
 }
 
 body {
-	background-image: url('../img/bg.png');
-	background-repeat: repeat-x repeat-y;
-
-	
+	background: rgba(209, 239, 245, 0.6);
 }
 
-div#header{
+div#header {
 	width: 100%;
 	text-align: center;
-	
+	background-image: url('../img/bg_top.png');
+	background-position: top center;
 }
 
 img#logo {
@@ -27,21 +26,17 @@ div#content {
 div#box {
 	margin: auto;
 	width: 960px;
-	height: 400px;
-	background-color: #CCA;
+	height: 450px;
+}
+
+#box img {
+	z-index: -3;
+	
 }
 
 .detail {
 	margin-left: 15px;
 }
-
-/*
-h1.detail {
-	font-family: Helvetica, Arial, sans-serif;
-	color: #FFF;
-	font-size: 16px;
-}
-*/
 
 img.detail {
 	width: 200px;
@@ -79,35 +74,35 @@ img.detail {
 	text-decoration: none;
 }
 
-div#footer {
-	width: 100%;
+#social {
+	text-align: center;
+	margin: 60px ;
+}
+
+#social a {
+	text-decoration: none;
+}
+
+social img {
+	border: 0px;
+	border-color: #CCC;
+}
+
+social img #twitter {
 	position: relative;
-	top: 115px;
-	background-image: url('../img/bg_footer.png');
-	background-position: top;
-	background-repeat: repeat-x;
-	height: 13px;
-	
+	top: 2px;
 }
 
 .logos {
-	z-index :-3;
+	text-align: center;
 	width: 100%;
-	height: 80px;
-	position: relative;
-	top: 115px;
-	background-color: #b18492;
+	margin-top: 80px;
 }
 
 .logos img {
-	margin-top: 10px;
-	margin-left: 15px;
+	border: 0px;
 }
 
 .logos a{
 	text-decoration: none;
-}
-
-.vertical{
-	vertical-align: inherit;
 }
