- Added character photos
Signed-off-by: Simone Kalb <simone.kalb@gmail.com>

--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,7 @@ div#box {
 	margin-left: 15px;
 }
 
+
 img.detail {
 	width: 200px;
 	height: 126px;
@@ -47,6 +48,15 @@ img.detail {
 	float: left;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
+}
+
+img.detail.big {
+	margin-right: 0px;
+	margin-top: auto;
+	text-align: center;
+	width: 575px;
+	height: 150px;
+	float: none;
 }
 
 .field {
@@ -74,6 +84,10 @@ img.detail {
 	text-decoration: none;
 }
 
+.lastDescFirst {
+	margin-top: 0px;
+	text-decoration: none;
+}
 #social {
 	text-align: center;
 	margin: 60px ;
