--- a/css/slidedeck/slidedeck.skin.css
+++ b/css/slidedeck/slidedeck.skin.css
@@ -16,7 +16,7 @@ Tags: flexible, white, black, multi-color
  */
 .skin-slidedeck {
     position: relative;
-	padding: 11px 11px 24px;
+	padding: 11px;
     background: url('back.png') 0 0 #d7d7d7;
     border: 14px solid #D1EFF5; //Changed
     box-shadow: 0 0 5px rgba(0,0,0,0.2);
