--- a/css/index.css
+++ b/css/index.css
@@ -27,30 +27,59 @@ div#box {
 	margin: auto;
 	width: 960px;
 	height: 450px;
+	border: none;
+	outline: none;	
 }
 
 #box img {
 	z-index: -3;
-	
 }
-.skin-slidedeck dl.slidedeck h1#one {
+
+#box a a:hover a:active a:visited {
+	text-decoration: none;
+	border: none;
+	outline: none;
+}
+
+.skin-slidedeck dl.slidedeck #leo {
 	color: #3c4ace;
 }
 
-.skin-slidedeck dl.slidedeck h1#two {
+.skin-slidedeck dl.slidedeck #leo.active {
+	color: #FFF;
+}
+
+
+.skin-slidedeck dl.slidedeck #tilde {
 	color: #e44048;
 } 
 
-.skin-slidedeck dl.slidedeck h1#three {
-	color: #c329d5;
+.skin-slidedeck dl.slidedeck #tilde.active {
+	color: #FFF;
 }
 
-.skin-slidedeck dl.slidedeck h1#four {
-	color: #d57337;
+.skin-slidedeck dl.slidedeck #albert {
+	color: #0c831d;
 }
 
-.skin-slidedeck dl.slidedeck h1#five {
+.skin-slidedeck dl.slidedeck #albert.active {
+	color: #FFF;
+}
+
+.skin-slidedeck dl.slidedeck #pixel {
+	color: #fc9004;
+}
+
+.skin-slidedeck dl.slidedeck #pixel.active {
+	color: #FFF;
+}
+
+.skin-slidedeck dl.slidedeck #robocat {
 	color: #e0cf14;
+}
+
+.skin-slidedeck dl.slidedeck #robocat.active {
+	color: #FFF;
 }
   
 
@@ -84,30 +113,49 @@ img.detail.big {
 	font-weight: 700;
 	font-size: 1.5em;
 	line-height: 1.5em;
+	color: #dd3939;
 }
 
 .description {
 	font-family: 'Amatic SC', cursive, sans-serif;
-	text-decoration: underline;
+	text-decoration: none;
 	font-weight: 400;
 	font-size: 1.5em;
 	color: #081c66;
 	line-height: 1.5em;
-	
 }
+
+.description a {
+	text-decoration: none;
+}
+
+.description a:active a:hover {
+	color: #39c3dd;
+}
+
+.description a:visited {
+	color: #dd3939;
+}
+
+.description span {
+	color: #dd3939;
+}
+
 .plate {
 	margin-left: 235px;
 }
 
 .lastDesc {
+	letter-spacing: 0.1em;
 	margin-top: 20px;
 	text-decoration: none;
 }
 
-.lastDescFirst {
+.firstPage {
 	margin-top: 0px;
-	text-decoration: none;
+	margin-left: 17px;
 }
+
 #social {
 	text-align: center;
 	margin: 60px ;
@@ -117,11 +165,11 @@ img.detail.big {
 	text-decoration: none;
 }
 
-social img {
+#social img {
 	border: 0px;
 }
 
-social img #twitter {
+#social img #twitter {
 	position: relative;
 	top: 2px;
 }
