--- a/css/index.css
+++ b/css/index.css
@@ -4,26 +4,59 @@
 }
 
 body {
-	background: rgba(209, 239, 245, 0.6);
+	//background: rgba(209, 239, 245, 0.6);
+	background-color: #FFF;
+
+}
+div#mainContainer {
+	width: 920px;
+	margin: auto;
+	-webkit-box-shadow: 1px 1px 1px 2px #888;
 }
 
 div#header {
-	width: 100%;
+	z-index: -9999;
 	text-align: center;
-	background-image: url('../img/bg_top.png');
+	background-image: url('../img/bg.png');
 	background-position: top center;
+	background-repeat: no-repeat;
+	border: 25px #f9c002 solid;
+	border-bottom: 0px;
+	
+}
+
+img#photo_group {
+	position: absolute; 
+	resize: both;
+	top: 190px; 
+	left: -14%; 
+	z-index:0;
 }
 
 img#logo {
+	margin-left: auto; 
 	border: 0px;
 	margin: 0px auto;
+	z-index: 2;
 }
 
+img#logos_bg{
+	position: relative;
+	top: 4px;
+	left: -28%;
+}
+
+
 div#content {
-	margin-top: 25px;
+	//margin-top: 25px;
+	margin-top: 395px;
+	background-color: #b2c992;
+	
 }
 
 div#box {
+	background-image: url('../img/bg.png');
+	background-position: top center;
 	margin: auto;
 	width: 960px;
 	height: 450px;
@@ -90,11 +123,14 @@ div#box {
 
 img.detail {
 	width: 200px;
-	height: 126px;
-	border: 3px #CCC solid;
+	height: 200px;
+	border: 3px #b2c992 solid;
 	margin-right: 15px;
 	margin-top: 15px;
 	float: left;
+	box-shadow: 5px 5px 5px #888;
+	-moz-box-shadow: 5px 5px 5px #888;
+	-webkit-box-shadow: 5px 5px 5px #888;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 }
@@ -109,7 +145,7 @@ img.detail.big {
 }
 
 .field {
-	font-family: 'Amatic SC', cursive, sans-serif;
+	font-family: 'Terminal Dosis', sans-serif;
 	font-weight: 700;
 	font-size: 1.5em;
 	line-height: 1.5em;
@@ -117,7 +153,7 @@ img.detail.big {
 }
 
 .description {
-	font-family: 'Amatic SC', cursive, sans-serif;
+	font-family: 'Terminal Dosis', sans-serif;
 	text-decoration: none;
 	font-weight: 400;
 	font-size: 1.5em;
@@ -149,21 +185,26 @@ img.detail.big {
 	color: #dd3939;
 }
 
-.plate {
-	margin-left: 235px;
+.tilde {
+	margin-top: 10px;
+	letter-spacing: 1.5px;
+	text-decoration: none;
 }
 
 .lastDesc {
 	letter-spacing: 1.5px;
-	margin-top: 20px;
+	margin-top: 11px;
 	text-decoration: none;
 }
 
 .firstPage {
 	margin-left: 17px;
+	margin-top: 12px;
+	
 }
 
 #social {
+	
 	text-align: center;
 	margin: 60px ;
 }
@@ -195,3 +236,90 @@ img.detail.big {
 .logos a{
 	text-decoration: none;
 }
+
+
+
+
+
+
+
+
+
+/** DIV delle specifiche del box che deve visualizzare le informazioni per ogni personaggio */
+div.picture {
+	width: 381px;
+	height: 232px;
+	position: absolute;
+	top: 423px;
+	left: 18.5%;
+	border: 15px #f9c002 solid;
+	//border-left: 0px;
+	/*
+	-moz-border-radius: 8px;
+	-webkit-border-radius: 8px;
+	border-left : 8px;
+	*/
+	background-color:#FFF;
+	opacity:0.7;
+	filter:alpha(opacity=70); /* For IE8 and earlier */
+	font-family: 'Chivo', sans-serif;
+	font-size: 10px;
+	text-align: left;
+	padding: 10px;
+	letter-spacing: 1px;
+	display: none;
+}
+
+div.picture .field {
+	color: #f9c002;
+	font-weight: 800;
+}
+
+div.picture .description{
+	font-weight: 600;
+}
+
+div.picture .description .lastDesc {
+	line-height: 1em;
+	letter-spacing: 1px;
+}
+
+div.footer img{
+	position: relative;
+	z-index: 3;
+	margin-left: 12px;
+	margin-top: -24px;
+}
+
+div.label {
+	position: absolute;
+	left: 9.3%;
+}
+
+div.label.robocat {
+	top: 60px;
+}
+
+div.label.pixel {
+	top: 190px;
+}
+
+div.label.leo {
+	top: 320px;
+}
+
+div.label.tilde {
+	top: 440px;
+}
+
+div.label.albert {
+	top: 580px;
+}
+
+div.label img.content {
+	//padding: 10px;
+	margin-left: 25px;
+	margin-top: 8px;
+	//width: 6%;	
+}
+
