--- a/css/slidedeck/slidedeck.skin.css
+++ b/css/slidedeck/slidedeck.skin.css
@@ -19,7 +19,7 @@ Tags: flexible, white, black, multi-color
     position: relative;
 	padding: 11px;
     background: url('back.png') 0 0 #d7d7d7;
-    border: 14px solid #D1EFF5; //Changed
+    border: 14px solid #b2c992; //Changed
     box-shadow: 0 0 5px rgba(0,0,0,0.2);
     -moz-box-shadow: 0 0 5px rgba(0,0,0,0.2);
     -webkit-box-shadow: 0 0 5px rgba(0,0,0,0.2);
@@ -93,7 +93,7 @@ Tags: flexible, white, black, multi-color
 	font-family: "Futura Bold", Arial, Helvetica, sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	background: url('spines.png') top left #d7d7d7;
+	background: url('spines_green.png') top left #d7d7d7;
 	color: #505050;
     margin: 0;
     padding: 0;
@@ -152,7 +152,7 @@ Tags: flexible, white, black, multi-color
  */
 .skin-slidedeck dl.slidedeck .activeCorner {
 	margin-left: -6px;
-	background-image: url('corner_blue.png');
+	background-image: url('corner_green.png');
 	width: 12px;
 	height: 25px;
 }
